--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -118,14 +118,13 @@
 
         <div class="row" >
             <div class="col-md-4" th:each="c:${cars}" >
-<div class="card mb-4 box-shadow">
-    <img class="card-img-top" th:src="${c.getImage()}"
-         alt="Thumbnail [100%x225]" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
-    <div class="card-body">
-        <p class="card-text" th:text="${c.getName()}"></p>
-        <p class="card-text" th:text="${c.getPrice()}"></p>
+            <div class="card mb-4 box-shadow"><img class="card-img-top" th:src="${c.getImage()}"
+                alt="Thumbnail [100%x225]" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+            <div class="card-body">
+            <p class="card-text" th:text="${c.getName()}"></p>
+            <p class="card-text" th:text="${c.getPrice()}"></p>
 
-        <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
                 <a th:href="'/detailCar/'+${c.getId()}" type="button" class="btn btn-sm btn-outline-secondary">Подробнее</a>
                 <a th:href="'/editCar/'+${c.getId()}" type="button" class="btn btn-sm btn-outline-secondary">Изменить</a>
